# pkg_example

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pkg_example.rst
pkg_example/: __init__.py  pkg_example.py
tests/: __init__.py  test_pkg_example.py
