[tool.poetry]
name = "pkg_example"
version = "0.1.0"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Nasim Taba <nasim.taba2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"
nbsphinx = "^0.8.6"
ipykernel = "^6.0.3"
sphinx-autoapi = "^1.8.3"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"